--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   ],
   "peerDependencies": {
     "react": ">=18.2.0",
-    "react-native": ">=0.73.0"
+    "react-native": ">=0.73.0",
+    "@react-native-community/netinfo": "11.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -38,11 +39,10 @@
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
     "prettier": "^3.7.4",
+    "react-native": "0.72.x",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0",
-    "react": "^18.2.0",
-    "react-native": "0.72.x"
+    "typescript-eslint": "^8.49.0"
   },
   "repository": {
     "type": "git",
