--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,7 +8,10 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "skipLibCheck": true,
+    "noImplicitAny": false
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "eslint.config.mts"]
