--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ericssonbroadcastservices/js-analytics-module",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "type": "commonjs",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,6 +25,7 @@
   ],
   "peerDependencies": {
     "react": ">=18.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "react-native": ">=0.73.0"
   },
   "devDependencies": {
