--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2026 2026 Red Bee Media Ltd <https://www.redbeemedia.com/\>
+#
+# SPDX-License-Identifier: CC0-1.0
+
 node_modules
 dist
 .vscode
